--- a/App5/App5/detail.xaml
+++ b/App5/App5/detail.xaml
@@ -1,25 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App5.detail">
+             x:Class="App5.detail"
+              >
     <ScrollView>
-        <StackLayout>
-            <ListView  x:Name="listView" HasUnevenRows="True" ItemSelected="listView_ItemSelected">
+        <AbsoluteLayout>
+            <StackLayout>
+            <Label Text="LGD is the best team！" HorizontalTextAlignment="Start" Font="Bold,30" BackgroundColor="#8181F7" />
+            <ListView  x:Name="listView" HasUnevenRows="True" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell >
                             <StackLayout Orientation="Vertical">
-                                <Label Text="{Binding detail}" />
-                                <StackLayout Orientation="Horizontal">
-                                    <Label Text="{Binding Topic}" />
-                                    <Label Text="{Binding detail}" />
-                                    <Label Text="{Binding author}" />
+       
+                                    <StackLayout Orientation="Horizontal" BackgroundColor="#2E64FE">
+                                <Image Source="{Binding icon}" WidthRequest="35" HeightRequest="35"></Image>
+                                        <StackLayout Orientation="Vertical" >
+                                    <Label Text="{Binding author}" Font="Bold,20"></Label>
+                                    <Label Text="{Binding level}" Font="12"></Label>
                                 </StackLayout>
+                            </StackLayout>
+                              
+                                <Label Text="{Binding detail}" HorizontalTextAlignment="Start" Font="15"></Label>
+                                <Image Source="{Binding image}" HorizontalOptions="Start" HeightRequest="75" WidthRequest="75"/>
+                                <Image Source="{Binding image1}" HorizontalOptions="Start" HeightRequest="75" WidthRequest="75"/>
+                                <Label Text="{Binding time}" TextColor="Gray" HorizontalTextAlignment="End" FontSize="10"></Label>
+
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
         </StackLayout>
+        <Image x:Name="reply" Source="create.png"   AbsoluteLayout.LayoutBounds="1,1,35,35"  AbsoluteLayout.LayoutFlags="PositionProportional"
+          ></Image>
+        </AbsoluteLayout >
     </ScrollView>
 </ContentPage>
