--- a/App5/App5/MainPage.xaml
+++ b/App5/App5/MainPage.xaml
@@ -13,8 +13,8 @@
     <ScrollView>
         <AbsoluteLayout>
             <StackLayout>
-                <Label Text="Dota2" FontSize="30" BackgroundColor="#5858FA" HorizontalTextAlignment="Center"></Label>
-                <ListView  x:Name="listView" HasUnevenRows="True" ItemSelected="listView_ItemSelected">
+                <Label Text="Dota2" FontSize="30" BackgroundColor="#5858FA" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand"></Label>
+                <ListView  x:Name="listView" HasUnevenRows="True" ItemSelected="listView_ItemSelected"  HorizontalOptions="FillAndExpand">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell >
